# Tomato_sales_MLOps

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  dvc.yaml  mlflow_test.py  mlflow_test2.py  pyproject.toml  requirements.txt  start.py  test_for_mlflow.py  test_for_mlflow1.py
.dvc/: config
data/raw/: .gitignore  Tomato.csv.dvc
docker/: .env
docs/: Makefile  conf.py  index.rst  make.bat
src/: __init__.py
src/data/: __init__.py  analyze_data.py  make_features.py
