[tool.poetry]
name = "tomato-project-mlops"
version = "0.1.0"
description = ""
authors = ["Reustlin <112853585+Reustlin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tomato_project_mlops"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

