[tool.poetry]
name = "tomato-project-k"
version = "0.1.0"
description = ""
authors = ["makkate <makurina.kate@gmail.com>"]
readme = "README.md"
packages = [{include = "tomato_project_k"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.3.0"
dvc = "^2.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
